# kami

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html
scripts/: bundle.sh
src/: bg.rs  consts.rs  input.rs  main.rs  particle.rs  root.rs  save.rs
src/anim/: anim_defns.rs  anim_wizardry.rs  mod.rs
src/debug/: mod.rs
src/gameplay/: acorn.rs  cake.rs  camera.rs  chef.rs  mod.rs  overlay.rs  platforms.rs
src/level/: level_defns.rs  level_loading.rs  mod.rs
src/menu/: mod.rs
src/my_ldtk/: mod.rs  my_ldtk_entity.rs  my_ldtk_int_cell.rs  my_ldtk_level_maint.rs  my_ldtk_load.rs
src/scratch/: mod.rs  move_play.rs
src/sound/: effect.rs  effect_defns.rs  mod.rs  song.rs  song_defns.rs
src/state/: mod.rs  state_commands.rs  state_menu.rs  state_triggers.rs
src/two_delight/: mod.rs  two_delight_anims.rs  two_delight_physics.rs
