[package]
name = "kami"
description = "kami game"
version = "0.0.1"
edition = "2021"
authors = ["Mark Pekala <mfpekala@gmail.com>"]
readme = "README.md"

[dependencies]
egui = "0.29"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.8.5"
bevy = "0.15"
bevy_2delight_anims = { path = "../bevy_2delight_anims" }
bevy_2delight_physics = { path = "../bevy_2delight_physics" }
bevy_2delight_layers = { path = "../bevy_2delight_layers" }
bevy_ecs_ldtk = "0.11"
bevy_ecs_tilemap = { version = "0.15", default-features = false }
bevy_egui = "0.31"
bevy-inspector-egui = "0.28"
bevy_pkv = "0.12"
lazy_static = "1.5.0"
